# docs/swagger.yaml
@@ -21,6 +21,28 @@ definitions:
     - due_date
     - title
     type: object
+  controllers.UpdateTaskRequest:
+    properties:
+      description:
+        type: string
+      due_date:
+        description: string from client
+        type: string
+      status:
+        description: optional
+        enum:
+        - pending
+        - in_progress
+        - completed
+        type: string
+      title:
+        maxLength: 100
+        type: string
+    required:
+    - description
+    - due_date
+    - title
+    type: object
   models.Task:
     properties:
       created_at:
@@ -45,6 +67,43 @@ info:
   title: Todo API
   version: "1.0"
 paths:
+  /deleteTask/{id}:
+    delete:
+      description: Delete a task by its id
+      parameters:
+      - description: Task id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Task deleted successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid task id
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Task not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to delete task
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete a task
+      tags:
+      - tasks
   /task:
     post:
       consumes:
@@ -81,16 +140,7 @@ paths:
       - tasks
   /tasks:
     get:
-      description: Retrieve all tasks with optional filters (status, due_date)
-      parameters:
-      - description: Filter by status (pending, in-progress, completed)
-        in: query
-        name: status
-        type: string
-      - description: Filter by due date (YYYY-MM-DD)
-        in: query
-        name: due_date
-        type: string
+      description: Retrieve all tasks from database (no filter)
       produces:
       - application/json
       responses:
@@ -126,6 +176,87 @@ paths:
               type: string
             type: object
       summary: Get a task by ID
+      tags:
+      - tasks
+  /tasksByFilter:
+    get:
+      description: Retrieve all tasks with optional filters (status, due_date)
+      parameters:
+      - description: Filter by status (pending, in-progress, completed)
+        in: query
+        name: status
+        type: string
+      - description: Filter by due date (YYYY-MM-DD)
+        in: query
+        name: due_date
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Task'
+            type: array
+        "400":
+          description: Invalid due_date format
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to fetch tasks
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get all tasks
+      tags:
+      - tasks
+  /updateTasks/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Replace all fields of a task by its ID.
+      parameters:
+      - description: Task ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated Task input
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UpdateTaskRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Task'
+        "400":
+          description: Invalid request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Task not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to update task
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update a task
       tags:
       - tasks
 swagger: "2.0"
